service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urlshortener-service
spec:
  type: LoadBalancer
  selector:
    app: urlshortener
  ports:
    - port: 80
      targetPort: 3000
